--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,11 +1,11 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     background-color: black;
     color: aliceblue;
-  
-    
+
+
     /*
     color: #EDEDED;
     color: #444444;
@@ -14,84 +14,189 @@
    color:#C92C6D;
     */
 }
-header img{
+
+header img {
     width: 30%;
-   
-    
+
+
 }
-.line{
+
+.line {
     border-bottom: 1px solid #EDEDED;
+
 }
-main{
+
+main {
     min-height: 80vh;
 }
-.img{
+
+.img {
     transform-origin: bottom right 60px;
 }
-.shadow{
+
+.shadow {
     /* color:#C92C6D; */
     text-shadow: #C92C6D 1px 0 10px;
     font-family: 'Tourney', cursive;
-    
-}
-footer{
-    border-top: 2px solid #444444;
-    border-bottom: 2px solid #444444;
-   
-}
-footer h2{
-    font-style: italic ;
+
 }
 
-.btn-new{
-    border:1px solid #C92C6D;
+footer {
+    border-top: 2px solid #444444;
+    border-bottom: 2px solid #444444;
+
+}
+
+footer h2 {
+    font-style: italic;
+}
+
+.btn-new {
+    border: 1px solid #C92C6D;
     color: #C92C6D;
 }
+
 .btn-new:hover,
-.btn-secondary{
-    border:1px solid #C92C6D;
+.btn-secondary {
+    border: 1px solid #C92C6D;
     color: #EDEDED;
     background-color: #C92C6D;
 }
 
-.card-img-top{
+.card-img-top {
     min-height: 168px;
     width: auto;
 }
-.card-title{
+
+.card-title {
     font-family: 'Tourney', cursive;
     text-shadow: #C92C6D 1px 0 10px;
 }
-.contact{
+
+.contact {
     max-width: 30vw;
 }
+
 .table .col,
-.t-row
-{
-    border-top: 0.1px solid  #444444;
-    border-left: 0.1px solid #444444;;
-    height:2rem;
+.t-row {
+    border-top: 0.1px solid #444444;
+    border-left: 0.1px solid #444444;
+    ;
+    height: 2rem;
     font-size: 1rem;
 
 }
-.table{
-    border-bottom: 0.1px solid  #C92C6D;
-    border-right: 0.1px solid  #C92C6D;
-    
+
+.table {
+    border-bottom: 0.1px solid #C92C6D;
+    border-right: 0.1px solid #C92C6D;
+
 }
-.t-row h4{
+
+.t-row h4 {
     font-weight: 100;
-    height:2rem; 
+    height: 2rem;
     color: #EDEDED;
     background-color: #444444;
     font-family: 'Tourney', cursive;
-    /* text-shadow: #C92C6D 1px 0 10px; */
-    /* opacity: 0.8; */
+
+}
+
+.square {
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background-color: #C92C6D;
+    animation-name: brilloDos;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    box-shadow: -8px -18px 20px 20px #C92C6D;
+    -webkit-box-shadow: -8px -18px 20px 20px #C92C6D;
+    -moz-box-shadow: -8px -18px 20px 20px #C92C6D;
+
+}
+
+.one {
+  
+   
+    animation-name: brilloDos;
+}
+
+.two {
+   
+    animation-name: brilloTres;
+
+}
+.three{
+    animation-name: brillo;
+
 }
 
 
+
+
+
+@keyframes brillo {
+    0% {
+        transform: scale(1.5);
+    }
+
+    30% {
+        transform: scale(1.0);
+    }
+
+    68%,
+    72% {
+        transform: scale(0.50);
+    }
+
+    100% {
+        transform: scale(0.0);
+    }
+}
+
+@keyframes brilloDos {
+    0% {
+        transform: scale(0.0);
+    }
+
+    30% {
+        transform: scale(.5);
+    }
+
+    68%,
+    72% {
+        transform: scale(1.0);
+    }
+
+    100% {
+        transform: scale(1.5);
+    }
+}
+
+@keyframes brilloTres {
+    0% {
+        transform: scale(1.0);
+    }
+
+    30% {
+        transform: scale(0.0);
+    }
+
+    68%,
+    72% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(0.5);
+    }
+}
+
+
+
 @media screen and(max-width:1200px) {
-    main{
-        min-height: auto; 
-     }
+    main {
+        min-height: auto;
+    }
 }
