se hicieron correcciones arrojadas por el validator

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -62,6 +62,9 @@ footer h2 {
     color: #EDEDED;
     background-color: #C92C6D;
 }
+.i_start{
+    font-size: 40px;
+}
 
 .card-img-top {
     min-height: 168px;
@@ -81,9 +84,10 @@ footer h2 {
 .t-row {
     border-top: 0.1px solid #444444;
     border-left: 0.1px solid #444444;
-    ;
+    
     height: 2rem;
-    font-size: 1rem;
+    font-size: .8rem;
+    flex-wrap: wrap;
 
 }
 
@@ -95,10 +99,11 @@ footer h2 {
 
 .t-row h4 {
     font-weight: 100;
-    height: 2rem;
+    height: 1.5rem;
     color: #EDEDED;
     background-color: #444444;
     font-family: 'Tourney', cursive;
+    flex-wrap: wrap;
 
 }
 
@@ -117,17 +122,18 @@ footer h2 {
 }
 
 .one {
-  
-   
+
+
     animation-name: brilloDos;
 }
 
 .two {
-   
+
     animation-name: brilloTres;
 
 }
-.three{
+
+.three {
     animation-name: brillo;
 
 }
@@ -193,31 +199,36 @@ footer h2 {
     }
 }
 
-.details{
+.details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     min-height: 80vh;
-    
-   
+
+
 }
-.row-details{
+
+.row-details {
     border: 2px solid #C92C6D;
     display: flex;
     flex-wrap: wrap;
     background-color: #444444;
-    /* width:50%;
-    height: 50%; */
+   
 
 }
-.container-details{
- margin-top: 10%;
- margin-bottom: 10%;
+
+.container-details {
+    padding: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 
-@media screen and(max-width:1200px) {
-    main {
+@media screen and (max-width:1024px) {
+    /* main {
         min-height: auto;
+    } */
+    #carouselExample{
+        margin-bottom: 0px!important;
     }
 }
