--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -102,17 +102,28 @@ footer h2 {
     border-left: 0.1px solid #444444;
 
     height: 2rem;
-    font-size: .8rem;
+    font-size: .8em;
     flex-wrap: wrap;
 
 }
 
+.t-col{
+    color: #C92C6D !important;
+}
 .table {
     border-bottom: 0.1px solid #C92C6D;
     border-right: 0.1px solid #C92C6D;
+    flex-wrap: wrap;
 
 }
+.stats_row{
+    flex-wrap: wrap;  
+    color: aqua; 
+   
 
+    
+    padding: left 2px;;
+}
 .t-row h4 {
     font-weight: 100;
     height: 1.5rem;
