correcciones extras de codigo

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,7 +125,7 @@ caption h4 {
     -moz-box-shadow: -8px -18px 20px 20px #C92C6D;
 
 }
-.squareDay {
+/* .squareDay {
     width: 10px;
     height: 10px;
     border-radius: 10px;
@@ -137,7 +137,7 @@ caption h4 {
     -webkit-box-shadow: -8px -18px 20px 20px #f7f328;
     -moz-box-shadow: -8px -18px 20px 20px#f7f328;
 
-}
+} */
 
 .one {
 
